media-server/qbittorrent/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  namespace: media-server
spec:
  selector:
    matchLabels:
      app: qbittorrent
  strategy:
    type: Recreate # This makes sure only one instance is running at a time
  template:
    metadata:
      labels:
        app: qbittorrent
        istio-ignore: yes
    spec:
      containers:
      - name: qbittorrent
        image: dyonr/qbittorrentvpn
        securityContext:
          capabilities:
            add:
              - NET_ADMIN
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
        - name: config-pv
          mountPath: /config
        - name: data-pv
          mountPath: /data
        - name: wireguard-config
          mountPath: /config/wireguard
      securityContext:
        fsGroup: 100
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault
      volumes:
      - name: config-pv
        persistentVolumeClaim:
          claimName: qbittorrent-config
      - name: data-pv
        persistentVolumeClaim:
          claimName: media-pvc-2
      - name: wireguard-config
        secret:
          secretName: wireguard-config-secret
