media-server/qbittorrent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-svc
  namespace: media-server
spec:
  ports:
  - name: https
    port: 443
    targetPort: https
  selector:
    app: qbittorrent
