media-server/qbittorrent/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent
  namespace: media-server
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
  - host: qbittorrent.wavecat.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: qbittorrent-svc
            port:
              name: https
  tls:
  - hosts:
    - qbittorrent.wavecat.net
    secretName: qbittorrent.wavecat.net
